--- a/More/src/main/res/values/strings.xml
+++ b/More/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">More</string>
+    <string name="more_activity_title">More info</string>
+    <string name="trial">Trial</string>
 </resources>
